PSP/Proyectos/LoginSpring_AdrianSaavedra/src/main/java/org/example/loginspring_adriansaavedra/common/errors/PlayerValidatorException.java
package org.example.loginspring_adriansaavedra.common.errors;

public class PlayerValidatorException extends RuntimeException{
    public PlayerValidatorException(String message) {
        super(message);
    }
}
